Add html structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock, paper, scissors?</title>
+    <script src="script.js" defer></script>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
-    <script src="script.js"></script>
+    <div id="game-container">
+        <div id="buttons">
+            <button id="rock">
+                <span>rock</span>
+            </button>
+            <button id="paper">
+                <span>paper</span>
+            </button>
+            <button id="scissors">
+                <span>scissors</span>
+            </button>
+        </div>
+        <div id="status-text">
+            <p id="log"></p>
+            <p id="score"></p>
+        </div>
+    </div>
     
 </body>
 </html>
