--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
     <div id="game-container">
         <div id="buttons">
             <button id="rock">
+                <img src="img/rock.png" width="250" height="300">
                 <span>rock</span>
             </button>
             <button id="paper">
+                <img src="img/paper.png" width="250" height="300">
                 <span>paper</span>
             </button>
             <button id="scissors">
+                <img src="img/scissors.png" width="250" height="300">
                 <span>scissors</span>
             </button>
         </div>
         <div id="status-text">
-            <p id="log"></p>
-            <p id="score"></p>
+            <p id="log">rock beats scissors!</p>
+            <p id="score">1 - 0</p>
         </div>
     </div>
     
