--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <div id="game-container">
+        <p id="round-text">rock, paper, scissors?</p>
         <div id="buttons">
             <button id="rock">
                 <img src="img/rock.png" width="250" height="300">
@@ -29,8 +30,8 @@
             </button>
         </div>
         <div id="status-text">
-            <p id="log">rock beats scissors!</p>
-            <p id="score">1 - 0</p>
+            <p id="log"></p>
+            <p id="score"></p>
         </div>
     </div>
     
