Add and style start button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
     <div id="game-container">
         <p id="round-text">rock, paper, scissors?</p>
+        <div id="start-button">
+            <button>start</button>
+        </div>
         <div id="buttons">
             <button id="rock">
                 <img src="img/rock.png" width="250" height="300">
