Code v2 of game behavior

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="game-container">
         <p id="round-text">rock, paper, scissors?</p>
         <div id="start-button">
-            <button>start</button>
+            <button id="start-button-button">play</button>
         </div>
         <div id="buttons">
             <button id="rock">
